updated font pt to px and adjusted padding & margins to align everything correctly

--- a/css/main.css
+++ b/css/main.css
@@ -23,9 +23,10 @@ header {
 
 header h1 {
     float: left;
-    font-size: 30pt;
+    font-size: 30px;
     font-weight: 700;
-    padding: 37px 0px;
+    margin: 0;
+    padding: 38px 0px;
     text-transform: uppercase;
 }
  
@@ -35,12 +36,12 @@ header h1 span {
 
 header nav {
     float: right;
-    padding: 52px 0;
+    padding: 46px 0;
 }
 
 header nav ul {
     margin: 0;
-    padding: 25px 0;
+    padding: 0;
 }
 
 header nav ul li {
@@ -79,25 +80,25 @@ header nav ul li a {
 
 .welcome h2 {
     color: #77a466;
-    font-size: 18pt;
+    font-size: 18px;
     padding: 30px 0px;
     text-transform: uppercase;
 }
 
 .welcome p {
-    font-size: 16pt;
+    font-size: 16px;
 }
 
 /*****BOTTOM SECTION*****/
 .bottom-section h3 {
-    font-size: 12pt;
+    font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
     padding: 10px 30px;
 }
 
 .bottom-section p {
-    font-size: 16pt;
+    font-size: 16px;
 }
 
 .section-one,
@@ -105,7 +106,11 @@ header nav ul li a {
 .section-three {
     float: left;
     height: auto;
-    width: 399px;
+    width: 398px;
+}
+
+.section-one h3 {
+    padding: 10px 0 10px 5px
 }
 
 .section-two {
@@ -120,7 +125,7 @@ header nav ul li a {
 .menu li {
     color: #77a466;
     line-height: 24px;
-    padding: 10px 0;
+    padding: 10px 0 10px 5px;
     text-transform: capitalize;
 }
 
@@ -144,7 +149,7 @@ footer {
 }
 
 footer h4 {
-    font-size: 16pt;
+    font-size: 16px;
 }
 
 footer h4 span {
